--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.5.2"
+    "lucide-react": "^0.513.0"
   },
   "devDependencies": {
     "@netlify/vite-plugin-react-router": "^1.0.1",
