--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "isbot": "^5.1.27",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.5.2"
+    "react-router": "^7.5.2",
     "lucide-react": "^0.513.0"
   },
   "devDependencies": {
