--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.5.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "lucide-react": "^0.513.0"
   },
   "devDependencies": {
